# pak

./: .codespellrc  .gitignore  .readthedocs.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: .gitignore  Makefile  requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  reference.rst  tutorials.rst
docs/source/_static/css/: highlighting.css  uniform_tables.css
docs/source/_static/js/: highlighting.js
docs/source/_templates/autosummary/: module.rst
docs/source/changelog/: v1.0.0.rst  v1.1.0.rst  v1.1.1.rst  v1.1.2.rst
docs/source/tutorials/: quickstart.rst
docs/source/tutorials/protocol_matching/: basic.rst  context.rst  handle.rst  identifying.rst  index.rst  stringy.rst
pak/: __init__.py  bit_field.py  dyn_value.py  packets.py  test.py
pak/io/: __init__.py  connection.py  streams.py
pak/packets/: __init__.py  aligned_packet.py  packet.py  packet_handler.py  subpacket.py
pak/types/: __init__.py  array.py  bit_mask.py  compound.py  default.py  deferring.py  enum.py  misc.py  numeric.py  optional.py  string.py  type.py
pak/util/: __init__.py  aio.py  bits.py  decorators.py  exceptions.py  inspection.py  interfaces.py  misc.py
tests/: test_bit_field.py  test_dyn_value.py  test_packets.py  util.py
tests/test_io/: test_connection.py  test_streams.py
tests/test_packets/: test_aligned_packet.py  test_packet.py  test_packet_handler.py  test_subpacket.py
tests/test_types/: test_array.py  test_bit_mask.py  test_bitmask.py  test_compound.py  test_default.py  test_deferring.py  test_enum.py  test_misc.py  test_numeric.py  test_optional.py  test_string.py  test_type.py
tests/test_utils/: annotated_module.py  test_aio.py  test_decorators.py  test_inspection.py
