[project]
name            = "pak"
version         = "1.0.0"
description     = "A general purpose packet marshaling library"
readme          = "README.md"
requires-python = ">=3.8"
license         = {file = "LICENSE"}

authors = [
    {name = "friedkeenan"},
]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Documentation" = "https://pak.readthedocs.io/"
"Repository"    = "https://github.com/friedkeenan/pak"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

docs = [
    "sphinx==7.1.2",
    "furo",
    "sphinx-copybutton",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Run doctests in modules and unit tests and check code coverage.
addopts = "--cov=pak --doctest-modules pak tests --cov-report=term-missing:skip-covered"

[tool.autoflake]
recursive                  = true
check_diff                 = true
quiet                      = true
remove_all_unused_imports  = true
ignore_init_module_imports = true
exclude                    = "build"
